@@ -48,6 +48,7 @@
         <javaModulesSurefireArgLine>
             --add-exports com.azure.core/com.azure.core.implementation.jackson=ALL-UNNAMED
             --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
+            --add-exports com.azure.monitor.ingestion/com.azure.monitor.ingestion.implementation=ALL-UNNAMED
             --add-opens com.azure.monitor.ingestion/com.azure.monitor.ingestion=ALL-UNNAMED
         </javaModulesSurefireArgLine>
     </properties>
@@ -63,7 +64,7 @@
         <dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-core</artifactId>
-            <version>1.37.0</version> <!-- {x-version-update;com.azure:azure-core;dependency} -->
+            <version>1.38.0-beta.1</version> <!-- {x-version-update;unreleased_com.azure:azure-core;dependency} -->
         </dependency>
         <dependency>
             <groupId>com.azure</groupId>
